1.add TriState.java 2.add MethodHandle 3.removed PooledBufferAllocator

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,6 @@ include 'commons-math'
 include 'commons-crypto'
 include 'commons-event'
 include 'commons-container'
+include 'commons-general'
+
+include 'commons-reflection'
